updated deployment with dependecies

--- a/.github/workflows/deploy_flow.yaml
+++ b/.github/workflows/deploy_flow.yaml
@@ -19,10 +19,14 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Dependencies
+        run: |
+          pip install prefect
+          pip install -r requirements.txt
+
       - name: Prefect Deploy
         env:
           PREFECT_API_KEY: ${{ secrets.PREFECT_API_KEY }}
           PREFECT_API_URL: ${{ secrets.PREFECT_API_URL }}
         run: |
-          pip install -r requirements.txt
           prefect deploy -n countries_flow
